# food_demand_prediction

./: .dockerignore  .gitignore  Autoencoder_Restaurant_full_stack (1).ipynb  Dockerfile  FoodDemandProject_regression.ipynb  InventoryForecasting_regression.ipynb  README.md  app.py  arima_forecasting.py  docker-compose.yml  inventory_forecasting_regression.py  lr_model.pkl  model.pkl  model_improvement_journey.md  nginx.conf  pyproject.toml  requirements.txt  restaurant_forecast_tool.py  ridge_model.pkl
Autoencoder/: Autoencoder.ipynb  Autoencoder_Documentation.md  __init__.py  anomaly_threshold.json  autoencoder_anomaly_detection.py  autoencoder_findings.md  best_inventory_autoencoder.h5  feature_columns.json  inventory_autoencoder_model.h5  inventory_scaler.pkl  optuna_study.pkl  training_history.pkl
data/: daily_orders_simulated_2024.csv  inventory_dataset_schema.csv  inventory_dataset_schema_and_explanation.md  inventory_delivery_forecast_data.csv  inventory_usage_2024.csv
forecasts/: arima_forecast.csv  regression_forecast.csv
forecasts/final/: BEST_MODEL_FORECAST.csv  BEST_MODEL_FORECAST.txt
models/arima/: arima_dips_model.pkl  arima_drinks_model.pkl  arima_flavours_model.pkl  arima_fries_large_model.pkl  arima_fries_reg_model.pkl  arima_metadata.pkl  arima_parameters.pkl  arima_performance.pkl  arima_tenders_model.pkl  arima_veggies_model.pkl  arima_wings_model.pkl
models/autoencoder/: best_inventory_autoencoder.h5
models/regression/: elasticnet_model.pkl  feature_selector_info.pkl  lasso_model.pkl  linear_regression_model.pkl  (+3 more)
templates/: index.html
(+11 files in other folders)
