[project]
name = "food-demand-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy<2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pmdarima>=2.0.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.14.0",
]
